2004-11-18  Not Zed  <NotZed@Ximian.com>

	* providers/nntp/camel-nntp-stream.c:
	* providers/nntp/camel-nntp-store.c:
	* providers/nntp/camel-nntp-summary.c: Make debug run based on
	'nntp' debug option.

	* providers/nntp/camel-nntp-stream.c (stream_fill): if we get a 0
	read, return ECONNRESET.  This should really have been put on the
	stream for that imap hack fix.

	* providers/nntp/camel-nntp-store.c (camel_nntp_try_authenticate):
	retry if the password attempt failed.

	** See bug #68556.

	* providers/nntp/camel-nntp-store.c (xover_setup): don't overwrite
	exception if we get a failure.
	(camel_nntp_command): if we continue, then set the return code to
	-1, so we re-loop rather than abort.

2004-11-15  Jeffrey Stedfast  <fejj@novell.com>

	* providers/pop3/camel-pop3-store.c (connect_to_server_wrapper):
	In the fallback cases, clear the exception first.

	* providers/imap/camel-imap-store.c (connect_to_server_wrapper):
	In the fallback cases, clear the exception first.

	* providers/imap4/camel-imap4-store.c (connect_to_server_wrapper):
	In the fallback cases, clear the exception first.

2004-11-15  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap/camel-imap-store.c (connect_to_server): Use
	camel_tcp_stream_ssl_new_raw() for STARTTLS stream.

	* providers/imap4/camel-imap4-store.c (connect_to_server): Use
	camel_tcp_stream_ssl_new_raw() for STARTTLS stream.

	* providers/pop3/camel-pop3-store.c: Change default port numbers
	to be correct (they shouldn't all be the pop3s port).
	(connect_to_server): Moved the last tcp_stream unref to afetr the
	last fail-check so that we won't ever get a double-unref on
	something we only own one ref on.
	(connect_to_server): Unref the tcp_stream if we fail to create an
	engine object before returning fail.
	(connect_to_server): Use camel_tcp_stream_ssl_new_raw() for
	STARTTLS stream.

	* providers/imap4/camel-imap4-stream.c (camel_imap4_stream_line):
	Fix bug #69408 by filling our input buffer if inptr == inend.
